@@ -17,9 +17,9 @@ flags:
     androidsplice: false
 packages:
 - '.'
-resolver: lts-5.18
 extra-deps:
-- process-1.3.0.0
-- concurrent-output-1.7.7
+- esqueleto-2.5.1
+- yesod-default-1.2.0
 explicit-setup-deps:
   git-annex: true
+resolver: lts-7.18
